Improved CMake file to handle lexbor in the sub-directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,15 @@ endif()
 # check for lexbor
 find_library(LEXBOR_LIBRARY NAMES lexbor required)
 if(NOT LEXBOR_LIBRARY)
-    message(FATAL_ERROR "liblexbor not found.")
+    message(STATUS "liblexbor not found on the system. Trying to find it in the ${PROJECT_SOURCE_DIR}/lexbor/ directory...")
+    if(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/lexbor/)
+        message(STATUS "${PROJECT_SOURCE_DIR}/lexbor/ exists. Trying to use it to build liblexbor...")
+        add_subdirectory(${PROJECT_SOURCE_DIR}/lexbor/)
+        target_include_directories(mapptth PRIVATE ${LEXBOR_DIR_HEADER})
+        target_link_libraries(mapptth lexbor)
+    else()
+        message(FATAL_ERROR "Could not find liblexbor...")
+    endif()
 else()
     message(STATUS "Found Lexbor ${LEXBOR_LIBRARY}")
     target_link_libraries(mapptth ${LEXBOR_LIBRARY})
