--- a/.gitignore
+++ b/.gitignore
@@ -51,9 +51,24 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+cmake-build-debug
+
 main
 .vscode/settings.json
 .clang-format
+.idea
 build/
 
 *~
