--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,11 +68,11 @@ else()
     string(REPLACE "." ";" CURL_VERSION_LIST ${CURL_VERSION_STRING}) # str -> stack
     list(GET CURL_VERSION_LIST 0 CURL_VERSION_MAJOR)
     list(GET CURL_VERSION_LIST 1 CURL_VERSION_MINOR)
-    if((CURL_VERSION_MAJOR GREATER_EQUAL 7) AND (CURL_VERSION_MINOR GREATER_EQUAL 62))
+    if((CURL_VERSION_MAJOR LESS 7) AND (CURL_VERSION_MINOR LESS 62))
+        message(FATAL_ERROR "libcurl's version should be at least 7.62.0")
+    else()
         link_directories(mapptth ${CURL_INCLUDE_DIRS})
         target_link_libraries(mapptth ${CURL_LIBRARY})
-    else()
-        message(FATAL_ERROR "libcurl's version should be at least 7.62.0")
     endif()
 endif()
 
